test/compile-fail/scope/use-private-mod/expected.txt
error: item `b` is private
 --> top.rhdl:7:7
  |
7 | use a::b::c;
  |        ^ private item
